Google auth Removed bcrypt and mocha Add bcryptjs:w
